ui/ozone/platform/drm/cursor_proxy_mojo.cc
@@ -9,14 +9,11 @@
 
 namespace ui {
 
+// We assume that this is invoked only on the UI thread.
 CursorProxyMojo::CursorProxyMojo(service_manager::Connector* connector)
     : connector_(connector->Clone()) {
+  ui_thread_ref_ = base::PlatformThread::CurrentRef();
   connector->BindInterface(ui::mojom::kServiceName, &main_cursor_ptr_);
-}
-
-void CursorProxyMojo::InitializeOnEvdev() {
-  evdev_ref_ = base::PlatformThread::CurrentRef();
-  connector_->BindInterface(ui::mojom::kServiceName, &evdev_cursor_ptr_);
 }
 
 CursorProxyMojo::~CursorProxyMojo() {}
@@ -25,19 +22,32 @@ void CursorProxyMojo::CursorSet(gfx::AcceleratedWidget widget,
                                 const std::vector<SkBitmap>& bitmaps,
                                 const gfx::Point& location,
                                 int frame_delay_ms) {
-  if (evdev_ref_ == base::PlatformThread::CurrentRef()) {
-    evdev_cursor_ptr_->SetCursor(widget, bitmaps, location, frame_delay_ms);
-  } else {
+  InitializeOnEvdevIfNecessary();
+  if (ui_thread_ref_ == base::PlatformThread::CurrentRef()) {
     main_cursor_ptr_->SetCursor(widget, bitmaps, location, frame_delay_ms);
+  } else {
+    evdev_cursor_ptr_->SetCursor(widget, bitmaps, location, frame_delay_ms);
   }
 }
 
 void CursorProxyMojo::Move(gfx::AcceleratedWidget widget,
                            const gfx::Point& location) {
-  if (evdev_ref_ == base::PlatformThread::CurrentRef()) {
-    evdev_cursor_ptr_->MoveCursor(widget, location);
-  } else {
+  InitializeOnEvdevIfNecessary();
+  if (ui_thread_ref_ == base::PlatformThread::CurrentRef()) {
     main_cursor_ptr_->MoveCursor(widget, location);
+  } else {
+    evdev_cursor_ptr_->MoveCursor(widget, location);
+  }
+}
+
+// Evdev runs this method on starting. But if a CursorProxyMojo is created long
+// after Evdev has started (e.g. if the Viz process crashes (and the
+// |CursorProxyMojo| self-destructs and then a new |CursorProxyMojo| is built
+// when the GpuThread/DrmThread pair are once again running), we need to run it
+// on cursor motions.
+void CursorProxyMojo::InitializeOnEvdevIfNecessary() {
+  if (ui_thread_ref_ != base::PlatformThread::CurrentRef()) {
+    connector_->BindInterface(ui::mojom::kServiceName, &evdev_cursor_ptr_);
   }
 }
 
