ui/ozone/platform/drm/cursor_proxy_mojo.h
@@ -33,7 +33,7 @@ class CursorProxyMojo : public DrmCursorProxy {
                  const gfx::Point& point,
                  int frame_delay_ms) override;
   void Move(gfx::AcceleratedWidget window, const gfx::Point& point) override;
-  void InitializeOnEvdev() override;
+  void InitializeOnEvdevIfNecessary() override;
 
   std::unique_ptr<service_manager::Connector> connector_;
 
@@ -41,7 +41,8 @@ class CursorProxyMojo : public DrmCursorProxy {
   ui::ozone::mojom::DeviceCursorPtr main_cursor_ptr_;
   ui::ozone::mojom::DeviceCursorPtr evdev_cursor_ptr_;
 
-  base::PlatformThreadRef evdev_ref_;
+  base::PlatformThreadRef ui_thread_ref_;
+  DISALLOW_COPY_AND_ASSIGN(CursorProxyMojo);
 };
 
 }  // namespace ui
