ui/ozone/platform/drm/host/drm_cursor.h
@@ -34,7 +34,7 @@ class DrmCursorProxy {
   virtual void Move(gfx::AcceleratedWidget window, const gfx::Point& point) = 0;
 
   // Initialize EvdevThread-specific state.
-  virtual void InitializeOnEvdev() = 0;
+  virtual void InitializeOnEvdevIfNecessary() = 0;
 };
 
 // DrmCursor manages all cursor state and semantics.
@@ -43,9 +43,10 @@ class DrmCursor : public CursorDelegateEvdev {
   explicit DrmCursor(DrmWindowHostManager* window_manager);
   ~DrmCursor() override;
 
-  // Sets or resets the DrmProxy |proxy|. If |proxy| is set, the DrmCursor uses
-  // it to communicate to the GPU process or thread.
-  void SetDrmCursorProxy(DrmCursorProxy* proxy);
+  // Sets or the DrmProxy |proxy|. If |proxy| is set, the DrmCursor uses
+  // it to communicate to the GPU process or thread. Returns the previous
+  // value.
+  void SetDrmCursorProxy(std::unique_ptr<DrmCursorProxy> proxy);
   void ResetDrmCursorProxy();
 
   // Change the cursor over the specifed window.
